...
          zIndex={1000}
          zIndexInverse={4000}
        />

        {/* ナビゲーションボタン */}
        <View className="mt-2 mb-8">
          <Button testID="demographics-continue-button" onPress={handleSave} disabled={isSubmitting}>
            {isSubmitting ? (
              <ActivityIndicator color="white" />
            ) : (
              <ButtonText className={buttonTextVariants()}>
                {t('common.next')}
              </ButtonText>
...
