...
            }}
          />
        )}

        {/* ナビゲーションボタン */}
        <View className="mt-2 mb-8">
          <Button testID="category-continue-button" onPress={handleSave} disabled={isSubmitting}>
            {isSubmitting ? (
              <ActivityIndicator color="white" />
            ) : (
              <ButtonText className={buttonTextVariants()}>
                {t('common.next')}
              </ButtonText>
...
