...
        loadingComponent={<MixedFeedSkeleton />}
        emptyMessage={emptyMessage}
        emptyIonIcon={emptyIcon}
      >
        {(items) => (
          <FlashList
            testID="mixed-feed-list"
            data={items}
            keyExtractor={getItemKey}
            renderItem={renderItem}
            refreshControl={
              <RefreshControl refreshing={isRefetching} onRefresh={refetch} />
            }
...
